--- a/hugo/assets/scss/custom.scss
+++ b/hugo/assets/scss/custom.scss
@@ -95,7 +95,7 @@ $padding-16: 1rem !default;
 }
 
 .overview {
-  background: rgba(255, 32, 121, 0.1); //#FF2079;
+  background: #586F6B; //rgba(255, 32, 121, 0.1); //#FF2079;
   border-radius: 3px;
   padding: 4px 10px 4px 10px;
   float: right;
