--- a/hugo/assets/scss/_bootstrap-variables.scss
+++ b/hugo/assets/scss/_bootstrap-variables.scss
@@ -15,9 +15,11 @@ $container-max-widths: (
 
 $grid-gutter-width: 20px;
 
-$primary: #FF2079;
-$secondary: #04005E;
+$primary: #586F6B; //#7D7C7A; //#D81159; //#053640; //#FF2079;
+$secondary: #7F9183; //#5B5B5B; //#04005E;
 $black: #212529;
+
+// #B8B8AA; #7F9183; #586F6B; #CFC0BD; #DDD5D0;
 
 // Links
 $link-color: $primary;
