--- a/hugo/assets/scss/_bootstrap-variables.scss
+++ b/hugo/assets/scss/_bootstrap-variables.scss
@@ -15,7 +15,7 @@ $container-max-widths: (
 
 $grid-gutter-width: 20px;
 
-$primary: #586F6B; //#7D7C7A; //#D81159; //#053640; //#FF2079;
+$primary: #FF2079; //#586F6B; //#7D7C7A; //#D81159; //#053640; //#FF2079;
 $secondary: #7F9183; //#5B5B5B; //#04005E;
 $black: #212529;
 
