--- a/hugo/layouts/_default/baseof.html
+++ b/hugo/layouts/_default/baseof.html
@@ -7,7 +7,9 @@
   <title>{{ block "title" . }}{{ .Title }} - {{ .Site.Title }}{{ end }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {{ block "meta_tags" . }}{{end}}
-  <link rel="icon" href="{{ "favicon.png" | absURL}}">
+  
+  <!--<link rel="icon" href="{{ "favicon.png" | absURL}}">-->
+  <link rel="icon" type="image/png" href="/images/favicon.png">
 
   {{ if .Site.IsServer }}
   {{ $style := resources.Get "/scss/style.scss" | resources.ToCSS (dict "targetPath" "/css/style.css" "enableSourceMap" true) }}
