--- a/hugo/layouts/partials/sidebar.html
+++ b/hugo/layouts/partials/sidebar.html
@@ -30,7 +30,11 @@
     {{ range (where .Section.Pages "Params.bookhidden" "ne" true) }}
       {{ if .IsSection }}
         <li {{- if .Params.BookFlatSection }} class="section-flat" {{ end -}}>
+          
+          <a href="{{ .Page.RelPermalink }}">
           {{ template "page-link" (dict "Page" . "CurrentPage" $.CurrentPage) }}
+          </a>
+
           {{ template "section-children" (dict "Section" . "CurrentPage" $.CurrentPage) }}
         </li>
       {{ else if and .IsPage .Content }}
