--- a/hugo/layouts/_default/list.html
+++ b/hugo/layouts/_default/list.html
@@ -7,7 +7,8 @@
 <!--<span class="overview">Overview</span>-->
 <h1 class="title">{{ .Title }}</h1>
 <div class="content">
-  {{ .Content }}
+	<!--<p>list.html TEMPLATE</p>-->
+  	{{ .Content }}
 </div>
 
 {{ range.Pages }}
