--- a/hugo/layouts/partials/sub-footer.html
+++ b/hugo/layouts/partials/sub-footer.html
@@ -3,9 +3,26 @@
     <div class="row">
       <div class="col-12">
         <div class="sub-footer-inner">
-          <ul>
-            <li class="zerostatic"><a href="https://www.zerostatic.io">www.zerostatic.io</a></li>
-          </ul>      
+          
+          
+          {{ range .Pages }}
+              <!--<p>{{ printf "%#v" .RelPermalink }}</p>-->
+              {{ if eq "/footer/" .RelPermalink }}
+              <ul>                    
+                  {{ range .Pages }}
+                  <li class="zerostatic">
+                    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+                  </li>
+                        <!--{{ .Render "summary" }}-->
+                  {{ end }}
+                    
+                </ul> 
+                {{ end }}
+          {{ end }}
+
+          {{ block "main" . }}
+          {{ end }}
+
           <!-- <br/> {{ printf "%#v" .Kind }} -->
         </div>
       </div>
