--- a/hugo/layouts/_default/baseof.html
+++ b/hugo/layouts/_default/baseof.html
@@ -9,7 +9,7 @@
   {{ block "meta_tags" . }}{{end}}
   
   <!--<link rel="icon" href="{{ "favicon.png" | absURL}}">-->
-  <link rel="icon" type="image/png" href="/images/favicon.png">
+  <link rel="icon" type="image/png" href="/favicon.png">
 
   {{ if .Site.IsServer }}
   {{ $style := resources.Get "/scss/style.scss" | resources.ToCSS (dict "targetPath" "/css/style.css" "enableSourceMap" true) }}
