--- a/hugo/assets/scss/custom.scss
+++ b/hugo/assets/scss/custom.scss
@@ -45,6 +45,11 @@ $padding-4: 0.25rem !default;
 $padding-8: 0.5rem !default;
 $padding-16: 1rem !default;
 
+
+$headline-mt-base: 60px !default;
+$headline-mt-1: $headline-mt-base *0.8 !default;
+$headline-mb-base: 20px !default;
+
 //$font-size-base: 16px !default;
 //$font-size-12: 0.75rem !default;
 //$font-size-14: 0.875rem !default;
@@ -73,8 +78,8 @@ $padding-16: 1rem !default;
   font-size: 2.0rem;
   line-height: 1.1;
   font-family: $font-family-base;
-  letter-spacing: -0.2px;
-  font-weight: 100;
+  letter-spacing: 0.2px;
+  font-weight: 400;
   margin-bottom: 20px;
   @include media-breakpoint-up(md) {
     font-size: 2.2rem;
@@ -107,8 +112,8 @@ $padding-16: 1rem !default;
       font-family: $font-family-base;
       font-size: 2.0rem;
       line-height: 1.4;
-      font-weight: 300;
-      margin-bottom: 20px;
+      font-weight: 400;
+      margin-bottom: $headline-mb-base;
     }
     h2 {
       font-size: 1.6rem;
@@ -116,34 +121,68 @@ $padding-16: 1rem !default;
       font-weight: 400;
       letter-spacing: -0.01em;
       font-family: $font-family-base;
-      margin-bottom: 20px;
+      margin-bottom: $headline-mb-base;
+      margin-top: $headline-mt-base;
     }
     h3 {
       font-size: 1.3rem;
       line-height: 1.4;
       font-weight: 400;
       font-family: $font-family-base;
-      margin-bottom: 20px;
+      margin-bottom: $headline-mb-base;
+      margin-top: $headline-mt-1;
     }
     h4 {
       font-size: 1.2rem;
       line-height: 1.4;
-      font-weight: 500;
+      font-weight: 400;
       font-family: $font-family-base;
-      margin-bottom: 20px;
+      margin-bottom: $headline-mb-base;
+      margin-top: $headline-mt-1;
     }
     h5 {
       font-size: 1.1rem;
       line-height: 1.4;
-      font-weight: 600;
+      font-weight: 400;
       font-family: $font-family-base;
-      margin-bottom: 20px;
+      margin-bottom: $headline-mb-base;
+      margin-top: $headline-mt-1;
     }
     h6 {
       font-size: 1.0rem;
       line-height: 1.4;
-      font-weight: 700;
+      font-weight: 400;
       font-family: $font-family-base;
+      margin-bottom: $headline-mb-base;
+    }
+
+    p {
       margin-bottom: 20px;
     }
+
+    ul, ul.p {
+      margin-block-start: 0em;
+      margin-block-end: 0em;
+      margin-bottom: 0px;
+    }
+
+    h2+h3 {
+      margin-top:-$headline-mt-1/4;
+    }
+
+    h2.references~p {
+      font-size: 0.9rem;
+      margin-top:-$headline-mt-1/4;
+    }
+    
   }
+
+.toc {
+  ul {
+    list-style-type: square;
+  }
+}
+
+
+
+  
